add container kill e2e
Signed-off-by: yeya24 <yb532204897@gmail.com>

--- a/examples/etcd/etcd.yaml
+++ b/examples/etcd/etcd.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: etcd
-  namespace: chaos-testing
+  namespace: yeya24
   labels:
     app: etcd
 spec:
