--- a/examples/etcd/etcd.yaml
+++ b/examples/etcd/etcd.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: etcd
-  namespace: yeya24
+  namespace: chaos-testing
   labels:
     app: etcd
 spec:
