Add missing namespaces to helm templates
Some (not all) helm charts were missing namespace values. These are
essential for applying templates after rendering them.

https://github.com/helm/helm/issues/5465#issuecomment-541358344

Signed-off-by: Robert Collins <robert.collins@cognite.com>

--- a/helm/chaos-mesh/templates/chaos-daemon-daemonset.yaml
+++ b/helm/chaos-mesh/templates/chaos-daemon-daemonset.yaml
@@ -1,6 +1,7 @@
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: chaos-daemon
   labels:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
