--- a/helm/chaos-mesh/templates/collector-mysql.yaml
+++ b/helm/chaos-mesh/templates/collector-mysql.yaml
@@ -3,6 +3,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: chaos-collector-database
   labels:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
@@ -66,6 +67,7 @@ spec:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: mysql-initdb-config
 data:
   initdb.sql: |
@@ -92,6 +94,7 @@ data:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: collector-mysql-pv-claim
 spec:
   {{- if .Values.dashboard.volume.storageClassName }}
@@ -111,6 +114,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: chaos-collector-database
   labels:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
