--- a/helm/chaos-mesh/templates/collector-rbac.yaml
+++ b/helm/chaos-mesh/templates/collector-rbac.yaml
@@ -4,6 +4,7 @@
 kind: ServiceAccount
 apiVersion: v1
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: {{ .Values.dashboard.serviceAccount }}
   labels:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
@@ -102,6 +103,7 @@ roleRef:
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: {{ .Release.Name }}:chaos-dashboard
   labels:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
@@ -143,6 +145,7 @@ rules:
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: {{ .Release.Name }}:chaos-dashboard
   labels:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
