--- a/helm/chaos-mesh/templates/post-install-create-cert-job.yaml
+++ b/helm/chaos-mesh/templates/post-install-create-cert-job.yaml
@@ -2,6 +2,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: webhook-certs-job
   labels:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
@@ -81,6 +82,7 @@ spec:
               apiVersion: certificates.k8s.io/v1beta1
               kind: CertificateSigningRequest
               metadata:
+                namespace: {{ .Release.Namespace }}
                 name: ${csrName}
               spec:
                 groups:
