--- a/helm/chaos-mesh/templates/prometheus-configmap.yaml
+++ b/helm/chaos-mesh/templates/prometheus-configmap.yaml
@@ -2,6 +2,7 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: prometheus-config
   labels:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
