--- a/helm/chaos-mesh/templates/prometheus-service.yaml
+++ b/helm/chaos-mesh/templates/prometheus-service.yaml
@@ -3,6 +3,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: {{ .Release.Namespace }}
   name: chaos-prometheus
   labels:
     app.kubernetes.io/name: {{ template "chaos-mesh.name" . }}
