--- a/examples/chaosfs-configmap/cockroachdb-configmap.yaml
+++ b/examples/chaosfs-configmap/cockroachdb-configmap.yaml
@@ -14,12 +14,12 @@ data:
         "app.kubernetes.io/component": "cockroachdb"
     initContainers:
     - name: inject-scripts
-      image: pingcap/chaos-scripts:latest
+      image: pingcap/chaos-scripts:v0.8.0
       imagePullpolicy: Always
       command: ["sh", "-c", "/scripts/init.sh -d /cockroach/cockroach-data/data -f /cockroach/cockroach-data/fuse-data"]
     containers:
     - name: chaosfs
-      image: pingcap/chaos-fs:latest
+      image: pingcap/chaos-fs:v0.8.0
       imagePullpolicy: Always
       ports:
       - containerPort: 65534
