--- a/examples/chaosfs-configmap/tiflash-configmap.yaml
+++ b/examples/chaosfs-configmap/tiflash-configmap.yaml
@@ -14,12 +14,12 @@ data:
         "app": "tiflash"
     initContainers:
     - name: inject-scripts
-      image: pingcap/chaos-scripts:latest
+      image: pingcap/chaos-scripts:v0.8.0
       imagePullpolicy: Always
       command: ["sh", "-c", "/scripts/init.sh -d /data/db -f /data/fuse-data"]
     containers:
     - name: chaosfs
-      image: pingcap/chaos-fs:latest
+      image: pingcap/chaos-fs:v0.8.0
       imagePullpolicy: Always
       ports:
       - containerPort: 65534
