--- a/examples/etcd/etcd-configmap.yaml
+++ b/examples/etcd/etcd-configmap.yaml
@@ -11,12 +11,12 @@ data:
     name: chaosfs-etcd
     initContainers:
     - name: inject-scripts
-      image: pingcap/chaos-scripts:latest
+      image: pingcap/chaos-scripts:v0.8.0
       imagePullpolicy: Always
       command: ["sh", "-c", "/scripts/init.sh -d /var/run/etcd/default.etcd -f /var/run/etcd/fuse-data"]
     containers:
     - name: chaosfs
-      image: pingcap/chaos-fs:latest
+      image: pingcap/chaos-fs:v0.8.0
       imagePullpolicy: Always
       ports:
       - containerPort: 65534
