--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -20,7 +20,7 @@ controllerManager:
 
   replicaCount: 1
 
-  image: pingcap/chaos-mesh:latest
+  image: pingcap/chaos-mesh:v0.8.0
   imagePullPolicy: Always
 
   nameOverride: ""
@@ -50,7 +50,7 @@ controllerManager:
   podAnnotations: {}
 
 chaosDaemon:
-  image: pingcap/chaos-daemon:latest
+  image: pingcap/chaos-daemon:v0.8.0
   imagePullPolicy: Always
   grpcPort: 31767
   httpPort: 31766
@@ -88,7 +88,7 @@ dashboard:
 
   serviceAccount: chaos-dashboard
 
-  image: pingcap/chaos-dashboard:latest
+  image: pingcap/chaos-dashboard:v0.8.0
   imagePullPolicy: Always
 
   nodeSelector: {}
@@ -177,7 +177,7 @@ webhook:
 
 bpfki:
   create: false
-  image: pingcap/chaos-kernel:latest
+  image: pingcap/chaos-kernel:v0.8.0
   imagePullPolicy: Always
   grpcPort: 50051
   resources: {}
