Add a new `StressChaos` to generate plenty of stresses (#332)
* Add stress chaos type

--- a/helm/chaos-mesh/templates/collector-rbac.yaml
+++ b/helm/chaos-mesh/templates/collector-rbac.yaml
@@ -78,6 +78,7 @@ rules:
       - iochaos
       - timechaos
       - kernelchaos
+      - stresschaos
     verbs: ["*"]
 ---
 kind: ClusterRoleBinding
@@ -140,6 +141,7 @@ rules:
       - iochaos
       - timechaos
       - kernelchaos
+      - stresschaos
     verbs: ["*"]
 ---
 kind: RoleBinding
