--- a/helm/chaos-mesh/templates/controller-manager-rbac.yaml
+++ b/helm/chaos-mesh/templates/controller-manager-rbac.yaml
@@ -79,6 +79,7 @@ rules:
     - iochaos
     - timechaos
     - kernelchaos
+    - stresschaos
   verbs: ["*"]
 ---
 kind: ClusterRoleBinding
@@ -144,6 +145,7 @@ rules:
   - iochaos
   - timechaos
   - kernelchaos
+  - stresschaos
   verbs: ["*"]
 ---
 kind: RoleBinding
