--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -157,6 +157,11 @@ postJobs:
   podAnnotations: {}
 
 webhook:
+  # if empty and disable certManager, Helm will auto-generate these fields
+  crtPEM: |
+
+  keyPEM: |
+
   # Setup the webhook using cert-manager
   certManager:
     enabled: false
