--- a/test/image/e2e/Dockerfile
+++ b/test/image/e2e/Dockerfile
@@ -3,7 +3,7 @@ FROM alpine:3.10
 ENV KUBECTL_VERSION=v1.12.2
 ENV HELM_VERSION=v2.9.1
 
-RUN apk update && apk add --no-cache ca-certificates curl git openssl bash mysql-client
+RUN apk update && apk add --no-cache ca-certificates curl git openssl bash
 RUN curl https://storage.googleapis.com/kubernetes-release/release/${KUBECTL_VERSION}/bin/linux/amd64/kubectl \
     -o /usr/local/bin/kubectl && \
     chmod +x /usr/local/bin/kubectl && \
