Stress增加扩展参数 options 支持

--- a/examples/burn-cpu.yaml
+++ b/examples/burn-cpu.yaml
@@ -12,6 +12,7 @@ spec:
     cpu: 
       workers: 1
       load: 100
+      options: ["--cpu 2", "--timeout 600", "--hdd 1"]
   duration: "30s"
   scheduler:
     cron: "@every 2m"
