--- a/config/crd/bases/pingcap.com_kernelchaos.yaml
+++ b/config/crd/bases/pingcap.com_kernelchaos.yaml
@@ -115,14 +115,6 @@ spec:
               - fixed-percent
               - random-max-percent
               type: string
-            nextRecover:
-              description: Next time when this action will be recovered
-              format: date-time
-              type: string
-            nextStart:
-              description: Next time when this action will be applied again
-              format: date-time
-              type: string
             paused:
               description: If this chaos has been paused
               type: boolean
@@ -260,6 +252,17 @@ spec:
               type: string
             reason:
               type: string
+            scheduler:
+              properties:
+                nextRecover:
+                  description: Next time when this action will be recovered
+                  format: date-time
+                  type: string
+                nextStart:
+                  description: Next time when this action will be applied again
+                  format: date-time
+                  type: string
+              type: object
           required:
           - experiment
           - phase
