--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -90,14 +90,6 @@ spec:
               - fixed-percent
               - random-max-percent
               type: string
-            nextRecover:
-              description: Next time when this action will be recovered.
-              format: date-time
-              type: string
-            nextStart:
-              description: Next time when this action will be applied again.
-              format: date-time
-              type: string
             path:
               description: Path defines the path of files for injecting I/O chaos
                 action.
@@ -245,6 +237,17 @@ spec:
               type: string
             reason:
               type: string
+            scheduler:
+              properties:
+                nextRecover:
+                  description: Next time when this action will be recovered
+                  format: date-time
+                  type: string
+                nextStart:
+                  description: Next time when this action will be applied again
+                  format: date-time
+                  type: string
+              type: object
           required:
           - experiment
           - phase
@@ -376,14 +379,6 @@ spec:
               - fixed
               - fixed-percent
               - random-max-percent
-              type: string
-            nextRecover:
-              description: Next time when this action will be recovered
-              format: date-time
-              type: string
-            nextStart:
-              description: Next time when this action will be applied again
-              format: date-time
               type: string
             paused:
               description: If this chaos has been paused
@@ -522,6 +517,17 @@ spec:
               type: string
             reason:
               type: string
+            scheduler:
+              properties:
+                nextRecover:
+                  description: Next time when this action will be recovered
+                  format: date-time
+                  type: string
+                nextStart:
+                  description: Next time when this action will be applied again
+                  format: date-time
+                  type: string
+              type: object
           required:
           - experiment
           - phase
@@ -709,14 +715,6 @@ spec:
               - fixed
               - fixed-percent
               - random-max-percent
-              type: string
-            nextRecover:
-              description: Next time when this action will be recovered
-              format: date-time
-              type: string
-            nextStart:
-              description: Next time when this action will be applied again
-              format: date-time
               type: string
             paused:
               description: If this chaos has been paused
@@ -940,6 +938,17 @@ spec:
               type: string
             reason:
               type: string
+            scheduler:
+              properties:
+                nextRecover:
+                  description: Next time when this action will be recovered
+                  format: date-time
+                  type: string
+                nextStart:
+                  description: Next time when this action will be applied again
+                  format: date-time
+                  type: string
+              type: object
           required:
           - experiment
           - phase
@@ -1021,14 +1030,6 @@ spec:
               - fixed
               - fixed-percent
               - random-max-percent
-              type: string
-            nextRecover:
-              description: Next time when this action will be recovered
-              format: date-time
-              type: string
-            nextStart:
-              description: Next time when this action will be applied again
-              format: date-time
               type: string
             paused:
               description: If this chaos has been paused
@@ -1168,6 +1169,17 @@ spec:
               type: string
             reason:
               type: string
+            scheduler:
+              properties:
+                nextRecover:
+                  description: Next time when this action will be recovered
+                  format: date-time
+                  type: string
+                nextStart:
+                  description: Next time when this action will be applied again
+                  format: date-time
+                  type: string
+              type: object
           required:
           - experiment
           - phase
@@ -1227,14 +1239,6 @@ spec:
             mode:
               description: 'Mode defines the mode to run chaos action. Supported mode:
                 one / all / fixed / fixed-percent / random-max-percent'
-              type: string
-            nextRecover:
-              description: Next time when this action will be recovered
-              format: date-time
-              type: string
-            nextStart:
-              description: Next time when this action will be applied again
-              format: date-time
               type: string
             paused:
               description: If this chaos has been paused
@@ -1431,6 +1435,17 @@ spec:
               type: string
             reason:
               type: string
+            scheduler:
+              properties:
+                nextRecover:
+                  description: Next time when this action will be recovered
+                  format: date-time
+                  type: string
+                nextStart:
+                  description: Next time when this action will be applied again
+                  format: date-time
+                  type: string
+              type: object
           required:
           - experiment
           - phase
@@ -1510,14 +1525,6 @@ spec:
               - fixed
               - fixed-percent
               - random-max-percent
-              type: string
-            nextRecover:
-              description: Next time when this action will be recovered
-              format: date-time
-              type: string
-            nextStart:
-              description: Next time when this action will be applied again
-              format: date-time
               type: string
             paused:
               description: If this chaos has been paused
@@ -1662,6 +1669,17 @@ spec:
               type: string
             reason:
               type: string
+            scheduler:
+              properties:
+                nextRecover:
+                  description: Next time when this action will be recovered
+                  format: date-time
+                  type: string
+                nextStart:
+                  description: Next time when this action will be applied again
+                  format: date-time
+                  type: string
+              type: object
           required:
           - experiment
           - phase
