--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -21,7 +21,7 @@ controllerManager:
   replicaCount: 1
 
   image: pingcap/chaos-mesh:latest
-  imagePullPolicy: Never
+  imagePullPolicy: Always
 
   nameOverride: ""
   fullnameOverride: ""
@@ -51,7 +51,7 @@ controllerManager:
 
 chaosDaemon:
   image: pingcap/chaos-daemon:latest
-  imagePullPolicy: Never
+  imagePullPolicy: Always
   grpcPort: 31767
   httpPort: 31766
 
@@ -89,7 +89,7 @@ dashboard:
   serviceAccount: chaos-dashboard
 
   image: pingcap/chaos-dashboard:latest
-  imagePullPolicy: Never
+  imagePullPolicy: Always
 
   nodeSelector: {}
 
