Refactor nextStart and nextRecover (#514)

--- a/config/crd/bases/pingcap.com_iochaos.yaml
+++ b/config/crd/bases/pingcap.com_iochaos.yaml
@@ -92,14 +92,6 @@ spec:
               - fixed-percent
               - random-max-percent
               type: string
-            nextRecover:
-              description: Next time when this action will be recovered.
-              format: date-time
-              type: string
-            nextStart:
-              description: Next time when this action will be applied again.
-              format: date-time
-              type: string
             path:
               description: Path defines the path of files for injecting I/O chaos
                 action.
@@ -244,6 +236,17 @@ spec:
               type: string
             reason:
               type: string
+            scheduler:
+              properties:
+                nextRecover:
+                  description: Next time when this action will be recovered
+                  format: date-time
+                  type: string
+                nextStart:
+                  description: Next time when this action will be applied again
+                  format: date-time
+                  type: string
+              type: object
           required:
           - experiment
           - phase
