--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -235,6 +235,7 @@ spec:
             reason:
               type: string
             scheduler:
+              description: ScheduleStatus is the current status of chaos scheduler.
               properties:
                 nextRecover:
                   description: Next time when this action will be recovered
@@ -512,6 +513,7 @@ spec:
             reason:
               type: string
             scheduler:
+              description: ScheduleStatus is the current status of chaos scheduler.
               properties:
                 nextRecover:
                   description: Next time when this action will be recovered
@@ -930,6 +932,7 @@ spec:
             reason:
               type: string
             scheduler:
+              description: ScheduleStatus is the current status of chaos scheduler.
               properties:
                 nextRecover:
                   description: Next time when this action will be recovered
@@ -1158,6 +1161,7 @@ spec:
             reason:
               type: string
             scheduler:
+              description: ScheduleStatus is the current status of chaos scheduler.
               properties:
                 nextRecover:
                   description: Next time when this action will be recovered
@@ -1421,6 +1425,7 @@ spec:
             reason:
               type: string
             scheduler:
+              description: ScheduleStatus is the current status of chaos scheduler.
               properties:
                 nextRecover:
                   description: Next time when this action will be recovered
@@ -1652,6 +1657,7 @@ spec:
             reason:
               type: string
             scheduler:
+              description: ScheduleStatus is the current status of chaos scheduler.
               properties:
                 nextRecover:
                   description: Next time when this action will be recovered
