--- a/config/crd/bases/pingcap.com_iochaos.yaml
+++ b/config/crd/bases/pingcap.com_iochaos.yaml
@@ -237,6 +237,7 @@ spec:
             reason:
               type: string
             scheduler:
+              description: ScheduleStatus is the current status of chaos scheduler.
               properties:
                 nextRecover:
                   description: Next time when this action will be recovered
