remove next_start from iochaos
Signed-off-by: cwen0 <cwenyin0@gmail.com>

--- a/manifests/crd.yaml
+++ b/manifests/crd.yaml
@@ -230,6 +230,7 @@ spec:
             reason:
               type: string
             scheduler:
+              description: ScheduleStatus is the current status of chaos scheduler.
               properties:
                 nextRecover:
                   description: Next time when this action will be recovered
@@ -507,6 +508,7 @@ spec:
             reason:
               type: string
             scheduler:
+              description: ScheduleStatus is the current status of chaos scheduler.
               properties:
                 nextRecover:
                   description: Next time when this action will be recovered
@@ -925,6 +927,7 @@ spec:
             reason:
               type: string
             scheduler:
+              description: ScheduleStatus is the current status of chaos scheduler.
               properties:
                 nextRecover:
                   description: Next time when this action will be recovered
@@ -1153,6 +1156,7 @@ spec:
             reason:
               type: string
             scheduler:
+              description: ScheduleStatus is the current status of chaos scheduler.
               properties:
                 nextRecover:
                   description: Next time when this action will be recovered
@@ -1416,6 +1420,7 @@ spec:
             reason:
               type: string
             scheduler:
+              description: ScheduleStatus is the current status of chaos scheduler.
               properties:
                 nextRecover:
                   description: Next time when this action will be recovered
@@ -1647,6 +1652,7 @@ spec:
             reason:
               type: string
             scheduler:
+              description: ScheduleStatus is the current status of chaos scheduler.
               properties:
                 nextRecover:
                   description: Next time when this action will be recovered
