add document to the new io chaos template mechanism
Signed-off-by: yeya24 <yb532204897@gmail.com>

--- a/examples/chaosfs-configmap/pd-configmap.yaml
+++ b/examples/chaosfs-configmap/pd-configmap.yaml
@@ -12,7 +12,7 @@ data:
     selector:
       labelSelectors:
         "app.kubernetes.io/component": "pd"
-    template: sidecar-template
+    template: chaosfs-sidecar
     arguments:
       ContainerName: "pd"
       DataPath: "/var/lib/pd/data"
