--- a/examples/etcd/etcd-configmap.yaml
+++ b/examples/etcd/etcd-configmap.yaml
@@ -12,7 +12,7 @@ data:
     selector:
       labelSelectors:
         app: etcd
-    template: sidecar-template
+    template: chaosfs-sidecar
     arguments:
       ContainerName: "etcd"
       DataPath: "/var/run/etcd/default.etcd"
