--- a/manifests/chaosfs-sidecar.yaml
+++ b/manifests/chaosfs-sidecar.yaml
@@ -2,7 +2,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: sidecar-template
+  name: chaosfs-sidecar
+  namespace: chaos-testing
   labels:
     app.kubernetes.io/component: template
 data:
