--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,8 @@ jobs:
 
           if [[ "$job" == "verify" ]]; then
             make check
-            git diff -- . ':(exclude)go.mod' ':(exclude)go.sum' || (git diff --quiet -- . ':(exclude)go.mod' ':(exclude)go.sum'; echo Please make check before creating a PR; exit 1)
+            echo "Please make check before creating a PR"
+            git diff --quiet -- .
           elif [[ "$job" == "build" ]]; then
             make image
           elif [[ "$job" == "test" ]]; then
