--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -18,7 +18,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react",
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "baseUrl": "src"
   },
   "include": [
     "src"
