--- a/config/crd/bases/pingcap.com_iochaos.yaml
+++ b/config/crd/bases/pingcap.com_iochaos.yaml
@@ -63,7 +63,7 @@ spec:
             errno:
               description: "Errno defines the error code that returned by I/O action.
                 refer to: https://www-numi.fnal.gov/offline_software/srt_public_context/WebDocs/Errors/unix_system_errors.html
-                \n If `Errno` is empty, the operator will generate a error code for
+                \n If `Errno` is empty, the operator will generate an error code for
                 it randomly."
               type: string
             layer:
