--- a/ui/package.json
+++ b/ui/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.9.1",
     "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.19.2",
+    "dayjs": "^1.8.28",
     "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
