--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.54",
     "@reduxjs/toolkit": "^1.3.6",
     "axios": "^0.19.2",
     "dayjs": "^1.8.28",
