--- a/ui/package.json
+++ b/ui/package.json
@@ -1,16 +1,22 @@
 {
   "name": "chaos-mesh-dashboard-ui",
   "version": "0.1.0",
-  "description": "A Web UI for Chaos Mesh Dashboard",
+  "description": "A Web UI for Chaos Mesh",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.54",
+    "@reduxjs/toolkit": "^1.3.6",
+    "axios": "^0.19.2",
+    "dayjs": "^1.8.28",
     "formik": "^2.1.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "typescript": "^3.8.3"
   },
   "scripts": {
@@ -35,7 +41,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -43,11 +48,13 @@
     "@types/node": "^12.12.36",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.4",
+    "http-proxy-middleware": "^1.0.4",
     "husky": "^4.2.5",
     "lint-staged": "^10.1.7",
-    "node-sass": "^4.13.1",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "redux-logger": "^3.0.6"
   },
   "lint-staged": {
     "*.(j|t)s?(x)": "prettier --write"
